Nuevos endpoints de reservas. Validaciones en endpoints existentes. Agregados los nuevos endpoints en swagger.
