# app/routes/reservas_route.py
@@ -1,6 +1,3 @@
-from distutils.log import error
-import imp
-from lib2to3.pgen2 import token
 from flask import Blueprint
 from modules.reservas_module import Reservas_Module  as Reservas
 from decorators.error.error_middleware import error_middleware
@@ -13,13 +10,6 @@ def get_blueprint():
     """"Retorna el blueprint para la app principal"""
     return reservas_route
 
-@reservas_route.route(Reservas.base_url + '/getReservas/<int:id>', methods=['GET'])
-@token_required
-@error_middleware
-@roles_middleware("Empleado")
-def obtener_reservas(id):
-	return Reservas.obtener_habitaciones_reservadas(id)
-
 @reservas_route.route(Reservas.base_url + '/reservarHabitacion', methods=['POST'])
 @token_required
 @error_middleware
@@ -27,9 +17,23 @@ def obtener_reservas(id):
 def reservar_habitacion():
 	return Reservas.reservar_habitacion()
 
-@reservas_route.route(Reservas.base_url + '/getHabitacionesByFecha/<fecha>', methods=['GET'])
+@reservas_route.route(Reservas.base_url + '/getHabitacionesByFecha/<fecha_desde>/<fecha_hasta>', methods=['GET'])
 @error_middleware
 @token_required
 @roles_middleware("Cliente")
-def obtener_habitacion_by_dia(fecha):
-	return Reservas.obtener_reservas_by_fecha(fecha)
+def obtener_habitacion_by_dia(fecha_desde, fecha_hasta):
+	return Reservas.obtener_reservas_by_fecha(fecha_desde, fecha_hasta)
+
+@reservas_route.route(Reservas.base_url + '/getReservasByHabitacion/<int:id>', methods=['GET'])
+@error_middleware
+@token_required
+@roles_middleware("Cliente")
+def obtener_reservas_by_Habitacion(id):
+	return Reservas.obtener_reservas_by_habitacion(id)
+
+@reservas_route.route(Reservas.base_url + '/getEstadoHabitaciones/<fecha>', methods=['GET'])
+@error_middleware
+@token_required
+@roles_middleware("Cliente")
+def obtener_estado_habitaciones(fecha):
+	return Reservas.obtener_estado_habitaciones(fecha)
